--- a/prb.html
+++ b/prb.html
@@ -57,7 +57,7 @@
             a new logo and new robotics clothing. PRB also organizes spirit
             related activities at competitions although this usually involves
             the entire team.
-            <img src="img/prb/logoFull.jpg" width="450px">
+            <img src="img/prb/LogoFull.jpg" width="450px">
         </div>
     </div>
     <div class="footer">
